objects/vtse__Stand_Deliver_Task_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>vtse__Assessment_Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Criteria</label>
        <referenceTo>vtse__Assessment_Criteria__c</referenceTo>
        <relationshipLabel>Stand and Deliver Task Criteria</relationshipLabel>
        <relationshipName>Stand_Deliver_Task_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vtse__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vtse__Stand_Deliver_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stand and Deliver Task</label>
        <referenceTo>vtse__Stand_Deliver_Task__c</referenceTo>
        <relationshipLabel>Stand and Deliver Task Criteria</relationshipLabel>
        <relationshipName>Stand_Deliver_Task_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Stand and Deliver Task Criteria</label>
    <nameField>
        <displayFormat>SDTC-{0}</displayFormat>
        <label>Stand and Deliver Task Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stand and Deliver Task Criteria</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>